--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,1 +1,4 @@
+@import 'bootstrap/dist/css/bootstrap.min.css';
+@import 'bootstrap-icons/font/bootstrap-icons.scss';
 @import 'admin-lte/dist/css/adminlte.css';
+
