Fix for now, switchin to pooling mode, Hostmonster not support Redis

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,6 +1,7 @@
 @import 'bootstrap/dist/css/bootstrap.min.css';
 @import 'bootstrap-icons/font/bootstrap-icons.scss';
 @import 'admin-lte/dist/css/adminlte.css';
+@import './chat.css';
 
 .ribbon-wrapper {
     position: absolute;
