Add Firebase initialize and fix allow browser access

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,6 +3,10 @@
 @import 'admin-lte/dist/css/adminlte.css';
 @import './chat.css';
 
+
+body {
+    font-family: 'Noto Sans', sans-serif;
+}
 .ribbon-wrapper {
     position: absolute;
     top: 0;
