Add admin menu and fix sidebar scrollbar

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,12 +1,14 @@
 @import 'bootstrap/dist/css/bootstrap.min.css';
 @import 'bootstrap-icons/font/bootstrap-icons.scss';
 @import 'admin-lte/dist/css/adminlte.css';
+@import 'overlayscrollbars/styles/overlayscrollbars.css';
 @import './chat.css';
 
 
 body {
     font-family: 'Noto Sans', sans-serif;
 }
+
 .ribbon-wrapper {
     position: absolute;
     top: 0;
